Early attempt at bringing everything into `kitkat`

--- a/Python ODE/kitkat_linear_solver.ipynb
+++ b/Python ODE/kitkat_linear_solver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "carbon_box_model = load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
     "carbon_box_model.compile()"
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,11 +300,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experimental analysis follows"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from jax.numpy import float64, zeros\n",
+    "from pandas import read_csv\n",
+    "from os import getcwd\n",
+    "from ticktack.fitting import SingleFitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fitting_object = SingleFitter(carbon_box_model, \"Guttler14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def profile(func, args=[]) -> tuple:\n",
+    "    \"\"\"\n",
+    "    Profiles the function, func, with the arguments, args, returning the speed and the variance of the speed.\n",
+    "    \"\"\"\n",
+    "    time_sample = zeros(10)  # Storing the trials\n",
+    "    \n",
+    "    for i in range(10):\n",
+    "        timer = process_time()                          # starting a timer \n",
+    "        func(*args).block_until_ready()                                     # Running the model \n",
+    "        time_sample = time_sample.at[i].set(process_time() - timer)   # Stopping the timer and storing \n",
+    "\n",
+    "    return mean(time_sample), var(time_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = {\n",
+    "    \"module\": [],\n",
+    "    \"time\": [],\n",
+    "    \"type\": []\n",
+    "}\n",
+    "\n",
+    "odeints = {BS3 : \"ode\", DP5 : \"jax\", odeint_linear: \"linear\"} # For translation from string to module \n",
+    "\n",
+    "dataset = read_csv(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\") # Importing the miyake data\n",
+    "\n",
+    "for namespace in odeints:# Iterating through the namespaces of odeint function \n",
+    "    mean, variance = profile(carbon_box_model.run, [time_out, 100, \\\n",
+    "                production, odeint[solver], y_initial, parameters, \\\n",
+    "                PRODUCTION_RATE * UNIT_FACTOR]) )  # Profiling the speed\n",
+    "    results[\"module\"].append(odeints[namespace])\n",
+    "    results[\"time\"].append(float(mean) * 1000)\n",
+    "    results[\"type\"].append(\"odeint\")\n",
+    "\n",
+    "    # Single variable function \n",
+    "    loss = partial(loss_function, namespace.odeint, dataset, dydx, u0)\n",
+    "\n",
+    "    # The gradients exist below \n",
+    "    def gradient(p): \n",
+    "        if namespaces[namespace] == \"ode\":\n",
+    "            return jacfwd(loss)(p)         # Calculating the gradient \n",
+    "        else:\n",
+    "            return jacrev(loss)(p)\n",
+    "\n",
+    "    mean, variance = profile(gradient, [parameters])\n",
+    "\n",
+    "    results[\"module\"].append(namespaces[namespace])\n",
+    "    results[\"time\"].append(float(mean) * 1000)\n",
+    "    results[\"type\"].append(\"gradient\")\n",
+    "\n",
+    "    def hessians(p): \n",
+    "        if namespaces[namespace] == \"ode\":\n",
+    "            return jacfwd(jacfwd(loss))(p) # Calculating the hessian \n",
+    "        else:\n",
+    "            return jacrev(jacrev(loss))(p)\n",
+    "\n",
+    "    mean, variance = profile(hessians, [parameters])\n",
+    "\n",
+    "    results[\"module\"].append(namespaces[namespace])\n",
+    "    results[\"time\"].append(float(mean) * 1000)\n",
+    "    results[\"type\"].append(\"hessian\")"
+   ]
   }
  ],
  "metadata": {
