Outfitting the new code with the basics

--- a/Python ODE/odeint_grad_hessian.ipynb
+++ b/Python ODE/odeint_grad_hessian.ipynb
@@ -6,9 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jax.numpy import float64, zeros\n",
+    "from jax.numpy import float64, zeros, mean, var \n",
+    "from jax.experimental.ode import odeint as DP5\n",
+    "from ode import odeint as BS3\n",
     "from pandas import read_csv\n",
+    "from time import process_time\n",
     "from os import getcwd\n",
+    "from ticktack import load_presaved_model\n",
     "from ticktack.fitting import SingleFitter"
    ]
   },
@@ -18,7 +22,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "carbon_box_model = load_presaved_model(\"Guttler14\", production_rate_units=\"atoms/cm^2/s\")\n",
     "fitting_object = SingleFitter(carbon_box_model, \"Guttler14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odeint_linear(derivative, y0, timesteps, *args, **kwargs):\n",
+    "    step_size = timesteps[1] - timesteps[0]\n",
+    "\n",
+    "    def step(y, time_value, step_size=None, derivative=None):\n",
+    "        next_time_value = y + derivative(y, time_value) * step_size\n",
+    "        return next_time_value, next_time_value\n",
+    "\n",
+    "    step = partial(step, derivative=derivative, step_size=step_size)\n",
+    "    step = jit(step)\n",
+    "\n",
+    "    _, y_values = scan(f=step, init=y0, xs=timesteps) \n",
+    "    return y_values"
    ]
   },
   {
